<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.ark.center</groupId>
    <artifactId>ark-center-trade</artifactId>
    <version>1.0.0-SNAPSHOT</version>
    <modules>
        <module>ark-center-trade-client</module>
        <module>ark-center-trade-app</module>
        <module>ark-center-trade-adapter</module>
        <module>ark-center-trade-domain</module>
        <module>ark-center-trade-infra</module>
        <module>ark-center-trade-start</module>
    </modules>
    <packaging>pom</packaging>

    <properties>
        <ark.dependencies.version>1.0.0-SNAPSHOT</ark.dependencies.version>
    </properties>

    <dependencies>
<!--        <dependency>-->
<!--            <groupId>org.springframework.boot</groupId>-->
<!--            <artifactId>spring-boot-starter-log4j2</artifactId>-->
<!--        </dependency>-->
    </dependencies>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>com.ark.boot</groupId>
                <artifactId>ark-dependencies</artifactId>
                <version>1.0.0-SNAPSHOT</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <dependency>
                <groupId>com.ark.center</groupId>
                <artifactId>ark-center-trade-client</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.ark.center</groupId>
                <artifactId>ark-center-trade-app</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.ark.center</groupId>
                <artifactId>ark-center-trade-adapter</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.ark.center</groupId>
                <artifactId>ark-center-trade-domain</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.ark.center</groupId>
                <artifactId>ark-center-trade-infra</artifactId>
                <version>${project.version}</version>
            </dependency>

            <!-- 商品服务 -->
            <dependency>
                <groupId>com.ark.center</groupId>
                <artifactId>ark-center-product-client</artifactId>
                <version>${project.version}</version>
            </dependency>

            <!-- 支付服务 -->
<!--            <dependency>-->
<!--                <groupId>com.ark.center</groupId>-->
<!--                <artifactId>ark-center-pay-client</artifactId>-->
<!--                <version>${project.version}</version>-->
<!--            </dependency>-->

            <!-- MQ -->
            <dependency>
                <groupId>com.ark.mq</groupId>
                <artifactId>ark-component-mq-integration-spring-boot-starter</artifactId>
                <version>${project.version}</version>
            </dependency>
            <!-- MQ -->
        </dependencies>

    </dependencyManagement>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.10.1</version>
                <configuration>
                    <source>21</source>
                    <target>21</target>
                    <encoding>UTF-8</encoding>
                    <annotationProcessorPaths>
                        <!-- Lombok 注解处理器 -->
                        <path>
                            <groupId>org.projectlombok</groupId>
                            <artifactId>lombok</artifactId>
                            <version>1.18.30</version>
                        </path>
                        <!-- MapStruct 注解处理器 -->
                        <path>
                            <groupId>org.mapstruct</groupId>
                            <artifactId>mapstruct-processor</artifactId>
                            <version>1.5.3.Final</version>
                        </path>
                    </annotationProcessorPaths>
                </configuration>
            </plugin>
        </plugins>
    </build>

</project>